--- a/src/features/DestinationMaps/Euboa/Euboa.module.scss
+++ b/src/features/DestinationMaps/Euboa/Euboa.module.scss
@@ -15,6 +15,10 @@
   width: max-content;
 }
 
+.title {
+  display: none;
+}
+
 @media screen and (max-width: 1350px) {
   .container {
     transform: scale(0.7);
@@ -33,6 +37,7 @@
   }
 }
 .korfu {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -55,6 +60,7 @@
 }
 
 .kythira {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -77,6 +83,7 @@
 }
 
 .paxos {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -99,6 +106,7 @@
 }
 
 .lefkada {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -121,6 +129,7 @@
 }
 
 .ithaki {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -143,6 +152,7 @@
 }
 
 .kefalonia {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -165,6 +175,7 @@
 }
 
 .zakynthos {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
