--- a/src/features/DestinationMaps/Dodekannes/Dodekannes.module.scss
+++ b/src/features/DestinationMaps/Dodekannes/Dodekannes.module.scss
@@ -15,6 +15,10 @@
   width: max-content;
 }
 
+.title {
+  display: none;
+}
+
 @media screen and (max-width: 1350px) {
   .container {
     transform: scale(0.7);
@@ -35,6 +39,7 @@
 }
 
 .arki {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -57,6 +62,7 @@
 }
 
 .lipsi {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -79,6 +85,7 @@
 }
 
 .leros {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -101,6 +108,7 @@
 }
 
 .kalymnos {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -123,6 +131,7 @@
 }
 
 .kos {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -145,6 +154,7 @@
 }
 
 .tilos {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -167,6 +177,7 @@
 }
 
 .symi {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -189,6 +200,7 @@
 }
 
 .chalki {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -211,6 +223,7 @@
 }
 
 .rhodos {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -233,6 +246,7 @@
 }
 
 .karpathos {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -255,6 +269,7 @@
 }
 
 .kasos {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -277,6 +292,7 @@
 }
 
 .agathonissi {
+  display: block;
   &::after {
     content: '';
     display: block;
@@ -297,6 +313,7 @@
 }
 
 .nissiros {
+  display: block;
   &::after {
     content: '';
     display: block;
@@ -317,6 +334,7 @@
 }
 
 .patmos {
+  display: block;
   &::before {
     content: '';
     margin-left: auto;
@@ -338,6 +356,7 @@
 }
 
 .kastelorizo {
+  display: block;
   &::before {
     content: '';
     margin-left: auto;
@@ -359,6 +378,7 @@
 }
 
 .astypalea {
+  display: block;
   &::before {
     content: '';
     display: block;
