--- a/src/features/DestinationMaps/Ionische/Ionische.module.scss
+++ b/src/features/DestinationMaps/Ionische/Ionische.module.scss
@@ -16,6 +16,10 @@
   width: max-content;
 }
 
+.title {
+  display: none;
+}
+
 @media screen and (max-width: 1350px) {
   .container {
     transform: scale(0.7);
@@ -34,6 +38,7 @@
   }
 }
 .skiathos {
+  display: block;
   &::after {
     content: '';
     display: block;
@@ -54,6 +59,7 @@
 }
 
 .alonissos {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -76,6 +82,7 @@
 }
 
 .skopelos {
+  display: block;
   &::before {
     content: '';
     display: block;
@@ -96,6 +103,7 @@
 }
 
 .skyros {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
