--- a/src/features/DestinationMaps/Macedonia/Macedonia.module.scss
+++ b/src/features/DestinationMaps/Macedonia/Macedonia.module.scss
@@ -3,7 +3,7 @@
 .container {
   position: relative;
   width: 1040px;
-  height: 720px;
+  height: 680px;
   background: url('../../../../public/assets/images/destinations/Macedonia/Macedonia.png')
     no-repeat center;
   font-weight: $fw-semibold;
@@ -15,9 +15,13 @@
   width: max-content;
 }
 
+.title {
+  display: none;
+}
+
 @media screen and (max-width: 1350px) {
   .container {
-    transform: scale(0.7);
+    transform: scale(0.8);
   }
 }
 
@@ -54,6 +58,7 @@
 }
 
 .prespes {
+  display: block;
   &::after {
     content: '';
     display: block;
@@ -74,6 +79,7 @@
 }
 
 .nestosschucht {
+  display: block;
   &::after {
     content: '';
     display: block;
@@ -94,6 +100,7 @@
 }
 
 .chalkidiki {
+  display: block;
   &::after {
     content: '';
     display: block;
@@ -115,6 +122,7 @@
 }
 
 .alexandroupolis {
+  display: block;
   &::before {
     content: '';
     display: block;
@@ -136,6 +144,7 @@
 }
 
 .vergina {
+  display: block;
   &::after {
     content: '';
     display: inline-block;
@@ -158,6 +167,7 @@
 }
 
 .sirderochori {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -180,6 +190,7 @@
 }
 
 .kastoria {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -202,6 +213,7 @@
 }
 
 .sirerochori {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -224,6 +236,7 @@
 }
 
 .nimfeo {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -246,6 +259,7 @@
 }
 
 .edessa {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -268,6 +282,7 @@
 }
 
 .florina {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -290,6 +305,7 @@
 }
 
 .litochoro {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -312,6 +328,7 @@
 }
 
 .loutraki {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -334,6 +351,7 @@
 }
 
 .litochoro {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -356,6 +374,7 @@
 }
 
 .name {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -378,6 +397,7 @@
 }
 
 .stavroupolis {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -400,6 +420,7 @@
 }
 
 .thessaloniki {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -422,6 +443,7 @@
 }
 
 .chalkidki {
+  display: block;
   &::after {
     content: '';
     display: block;
@@ -443,6 +465,7 @@
 }
 
 .stavroupoli {
+  display: block;
   &::before {
     content: '';
     display: block;
@@ -464,6 +487,7 @@
 }
 
 .pindos {
+  display: block;
   &::before {
     content: '';
     display: block;
@@ -484,6 +508,7 @@
 }
 
 .olympos {
+  display: block;
   &::before {
     content: '';
     display: block;
@@ -504,6 +529,7 @@
 }
 
 .afytos {
+  display: block;
   &::before {
     content: '';
     display: block;
@@ -525,6 +551,7 @@
 }
 
 .bergathos {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -547,6 +574,7 @@
 }
 
 .kerkini {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -569,6 +597,7 @@
 }
 
 .kavala {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -591,6 +620,7 @@
 }
 
 .komotini {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -613,6 +643,7 @@
 }
 
 .maronia {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -635,6 +666,7 @@
 }
 
 .xanthi {
+  display: block;
   &::before {
     content: '';
     display: block;
@@ -656,6 +688,7 @@
 }
 
 .dadia {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -678,6 +711,7 @@
 }
 
 .alexandropolis {
+  display: block;
   &::before {
     content: '';
     display: block;
