--- a/src/features/DestinationMaps/Nordagaische/Nordagaische.module.scss
+++ b/src/features/DestinationMaps/Nordagaische/Nordagaische.module.scss
@@ -15,6 +15,10 @@
   width: max-content;
 }
 
+.title {
+  display: none;
+}
+
 @media screen and (max-width: 1350px) {
   .container {
     transform: scale(0.7);
@@ -33,6 +37,7 @@
   }
 }
 .thassos {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -55,6 +60,7 @@
 }
 
 .samothrake {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -77,6 +83,7 @@
 }
 
 .lemmos {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -99,6 +106,7 @@
 }
 
 .fourni {
+  display: block;
   &::before {
     content: '';
     display: block;
@@ -120,6 +128,7 @@
 }
 
 .lesbosmytilene {
+  display: block;
   &::before {
     content: '';
     display: block;
@@ -140,6 +149,7 @@
 }
 
 .chios {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -162,6 +172,7 @@
 }
 
 .ikaria {
+  display: block;
   &::after {
     content: '';
     display: block;
@@ -182,6 +193,7 @@
 }
 
 .samos {
+  display: block;
   &::after {
     content: '';
     display: block;
