--- a/src/features/DestinationMaps/Sporaden/Sporaden.module.scss
+++ b/src/features/DestinationMaps/Sporaden/Sporaden.module.scss
@@ -15,6 +15,10 @@
   width: max-content;
 }
 
+.title {
+  display: none;
+}
+
 @media screen and (max-width: 1350px) {
   .container {
     transform: scale(0.7);
@@ -33,6 +37,7 @@
   }
 }
 .igoumenitsa {
+  display: block;
   &::after {
     content: '';
     display: block;
@@ -54,6 +59,7 @@
 }
 
 .artisti {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -76,6 +82,7 @@
 }
 
 .ioannina {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -98,6 +105,7 @@
 }
 
 .parga {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -120,6 +128,7 @@
 }
 
 .ammoudia {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -142,6 +151,7 @@
 }
 
 .elati {
+  display: block;
   &::before {
     content: '';
     display: block;
@@ -162,6 +172,7 @@
 }
 
 .kastraki {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -184,6 +195,7 @@
 }
 
 .makrinitsa {
+  display: block;
   &::after {
     content: '';
     display: inline-block;
@@ -206,6 +218,7 @@
 }
 
 .volos {
+  display: block;
   &::after {
     content: '';
     display: inline-block;
@@ -228,6 +241,7 @@
 }
 
 .portaria {
+  display: block;
   &::after {
     content: '';
     display: block;
@@ -248,6 +262,7 @@
 }
 
 .zagora {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -270,6 +285,7 @@
 }
 
 .vizitsa {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -292,6 +308,7 @@
 }
 
 .nafpaktos {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -314,6 +331,7 @@
 }
 
 .delphi {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
@@ -336,6 +354,7 @@
 }
 
 .athen {
+  display: block;
   &::before {
     content: '';
     display: inline-block;
