--- a/src/pages/TravelPlannerPage/StaticTravelPlannerPage/Overview/Overview.module.scss
+++ b/src/pages/TravelPlannerPage/StaticTravelPlannerPage/Overview/Overview.module.scss
@@ -8,9 +8,7 @@
   width: 100vw;
   height: 810px;
   background-color: $color-laros-dark-grey;
-}
-.whiteBackground {
-  width: 100vw;
-  height: 510px;
-  background-color: $color-light-grey;
+  background-image: url('/assets/images/static_travel_plannerPage/06.png');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
