--- a/src/features/Header/Header.module.scss
+++ b/src/features/Header/Header.module.scss
@@ -172,8 +172,9 @@
   transition: 0.5s;
   border-radius: 30px;
   z-index: 9999;
-  @include tablet-desktop {
-    display: none;
+  display: none;
+  @include mobile {
+    display: block;
   }
 }
 
