--- a/src/features/Review/Review.module.scss
+++ b/src/features/Review/Review.module.scss
@@ -49,11 +49,7 @@
   display: flex;
   padding: 10px;
   overflow-y: auto;
-
-  @include mobile {
-    justify-content: center;
-    flex-wrap: wrap;
-  }
+  width: 100%;
 }
 
 .image {
