--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -1,24 +1,59 @@
 @use '/src/styles/style.scss' as *;
 
-.main {
-  position: relative;
-  width: 100vw;
-  height: 810px;
-  background-image: url('/assets/images/homepage/background.jpg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  color: $color-white;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  margin-bottom: 500px;
-}
-.bgWrap {
-  background-color: $color-modal-header;
-}
-
 .commentsWrapper {
   background-color: rgba(242, 245, 248, 1);
   margin-bottom: 60px;
   padding-bottom: 200px;
+}
+
+.reactPlayerWrapper {
+  width: 100%;
+  height: 810px;
+  overflow: hidden;
+  position: relative;
+}
+.video {
+  height: 1010px;
+  margin-top: -100px;
+  margin-left: -150px;
+  width: 120%;
+
+  @media (min-width: 1700px) {
+    width: 100%;
+  }
+  @media (min-width: 1850px) {
+    margin-left: -100px;
+  }
+  @media (max-width: 1220px) {
+    margin-top: -150px;
+  }
+  @media (max-width: 1090px) {
+    margin-left: -300px;
+    width: 140%;
+  }
+  @media (max-width: 940px) {
+    margin-left: -500px;
+    width: 170%;
+  }
+  @media (max-width: 770px) {
+    margin-left: -690px;
+    width: 220%;
+  }
+  @media (max-width: 600px) {
+    margin-left: -800px;
+    width: 270%;
+  }
+  @media (max-width: 500px) {
+    margin-left: -950px;
+    width: 350%;
+  }
+  @media (max-width: 400px) {
+    margin-left: -800px;
+    width: 400%;
+  }
+
+  @media (max-width: 330px) {
+    margin-left: -900px;
+    width: 450%;
+  }
 }
