--- a/src/pages/HomePage/Main/Main.module.scss
+++ b/src/pages/HomePage/Main/Main.module.scss
@@ -4,14 +4,10 @@
 .main {
   width: 100vw;
   height: 810px;
-  background-image: url('/assets/images/homepage/background.jpg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
   color: $color-white;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-
+  margin-top: -810px;
   @include mobile {
     grid-template-columns: repeat(1, 1fr);
   }
@@ -44,10 +40,11 @@
 }
 
 .main_text {
-  max-width: 530px;
+  max-width: 550px;
   margin-left: auto;
   position: relative;
   top: 50%;
+  padding-left: 20px;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
@@ -116,11 +113,6 @@
 
 .commentsWrapper {
   background-color: rgba(242, 245, 248, 1);
-}
-
-.reactPlayerWrapper {
-  position: absolute;
-  top: -20000px;
 }
 
 .hidden {
