--- a/src/pages/TripOffersPage/TripOffersPage.module.scss
+++ b/src/pages/TripOffersPage/TripOffersPage.module.scss
@@ -4,6 +4,14 @@
 .tripOffersPage {
   position: relative;
   padding: 170px 0 0;
+
+  @include mobile-tablet {
+    padding-top: 50px;
+  }
+
+  @include mobile {
+    padding-top: 10px;
+  }
 }
 
 .bg {
@@ -21,15 +29,15 @@
     background-size: auto;
   }
 }
-
-.title {
-  color: $color-white;
-  font-size: 56px;
-  padding-left: 165px;
-  font-weight: $fw-bold;
-  line-height: 67px;
-  z-index: 1;
-  position: relative;
+.shadow {
+  width: 100%;
+  height: 100%;
+  background-color: $color-bg-gallery-2;
+}
+.titleWrap {
+  width: 90%;
+  margin: auto;
+  padding: 0 80px;
 
   @include mobile-tablet {
     padding-left: 44px;
@@ -39,25 +47,22 @@
     padding: 0 32px;
   }
 }
+.title {
+  color: $color-white;
+  font-size: 56px;
+  font-weight: $fw-bold;
+  line-height: 67px;
+  z-index: 1;
+  position: relative;
+}
 
 .subTitle {
-  width: 100%;
-  max-width: 835px;
-  padding-left: 165px;
   color: $color-white;
   font-size: 12px;
   font-weight: $fw-regular;
   line-height: 20px;
   position: relative;
   z-index: 1;
-
-  @include mobile-tablet {
-    padding-left: 44px;
-  }
-
-  @include mobile {
-    padding: 0 32px;
-  }
 }
 
 .filters {
