--- a/src/pages/TripOffersPage/TripOffersPage.module.scss
+++ b/src/pages/TripOffersPage/TripOffersPage.module.scss
@@ -54,6 +54,8 @@
   line-height: 67px;
   z-index: 1;
   position: relative;
+  width: 80%;
+  margin: auto;
 }
 
 .subTitle {
@@ -63,6 +65,8 @@
   line-height: 20px;
   position: relative;
   z-index: 1;
+  width: 80%;
+  margin: auto;
 }
 
 .filters {
