--- a/src/pages/TravelPlannerPage/StaticTravelPlannerPage/Highlighted/Highlighted.module.scss
+++ b/src/pages/TravelPlannerPage/StaticTravelPlannerPage/Highlighted/Highlighted.module.scss
@@ -4,6 +4,28 @@
   width: 100%;
   max-width: 1110px;
   margin: 100px auto 0;
+  padding: 0 20px;
+
+  @include mobile-tablet {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  @include mobile {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  @include laptop {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .title {
@@ -14,8 +36,19 @@
 
 .items {
   display: flex;
-  gap: 40px;
+  gap: 3%;
   flex-wrap: wrap;
   flex-direction: row;
   padding-bottom: 80px;
+
+  @include laptop {
+    flex-direction: column;
+    align-items: center;
+  }
+  @include mobile-tablet {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
