--- a/src/pages/BrochuresPage/BrochuresPage.module.scss
+++ b/src/pages/BrochuresPage/BrochuresPage.module.scss
@@ -7,7 +7,6 @@
   }
 }
 .wrapper {
-  height: 100%;
   background-color: $color-white;
   border: 1px solid $color-white;
   border-radius: 16px;
@@ -41,6 +40,9 @@
   @include mobile {
     font-size: 30px;
   }
+  @media (max-width: 500px) {
+    text-align: center;
+  }
 }
 
 .subtitle {
@@ -55,6 +57,11 @@
   }
   @include mobile {
     margin-bottom: 20px;
+  }
+  @media (max-width: 500px) {
+    text-align: center;
+    width: 90%;
+    margin: 0 auto 20px;
   }
 }
 
@@ -102,6 +109,10 @@
   font-size: 20px;
   font-weight: $fw-bold;
   margin-bottom: 24px;
+
+  @media (max-width: 1400px) {
+    text-align: center;
+  }
 }
 
 .brochuresList {
@@ -109,27 +120,24 @@
   grid-template-columns: auto auto auto;
   max-width: 1250px;
   margin: 12px auto;
-
-  @include laptop {
-    width: 760px;
-    margin: 12px 0;
-    grid-template-columns: auto auto;
-  }
+  justify-content: center;
 
   @include mobile {
-    width: 760px;
-    margin: 12px 0;
-    grid-template-columns: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
-  @include mobile-laptop {
-    grid-template-columns: auto;
+  @media (max-width: 1400px) {
+    grid-template-columns: auto auto;
     justify-content: center;
     width: auto;
   }
 
   & div:not(:last-child) {
     margin-right: 24px;
+
     @include mobile {
       margin-right: 0;
     }
