--- a/src/pages/SpecialOffersPage/SpecialOffersPage.module.scss
+++ b/src/pages/SpecialOffersPage/SpecialOffersPage.module.scss
@@ -122,7 +122,7 @@
   align-items: center;
   justify-content: space-between;
 
-  &>div {
+  & > div {
     width: 100%;
     max-width: calc(1004px / 3);
     margin-right: 10px;
@@ -168,7 +168,7 @@
   margin: 0 9px 0 24px;
 
   @include mobile-tablet {
-    margin: 0 9px 0 0
+    margin: 0 9px 0 0;
   }
 }
 
@@ -210,4 +210,9 @@
   @include mobile {
     height: 100px;
   }
+}
+
+.loading {
+  width: 100%;
+  text-align: center;
 }
