--- a/src/features/SendBrochuresModal/SendBrochuresModal.module.scss
+++ b/src/features/SendBrochuresModal/SendBrochuresModal.module.scss
@@ -3,29 +3,47 @@
 .container {
   display: flex;
   width: 100%;
+  max-width: 850px;
   height: 100%;
   padding: 24px 85px 44px;
   overflow-y: scroll;
+
+  @include mobile {
+    padding: 24px 10px 44px;
+  }
 }
+
 .wrapper {
   position: relative;
+  width: 100%;
 }
+
 .title {
   font-family: $font-Lato;
   font-size: 14px;
   font-weight: $fw-regular;
 }
+
 .list {
   padding-top: 12px;
   display: flex;
   justify-content: start;
-  & > div {
+
+  @include mobile {
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+  }
+
+  &>div {
     margin-right: 12px;
   }
 }
+
 .form {
   margin-top: 36px;
-  width: 674px;
+  width: 100%;
+  max-width: 674px;
 }
 
 .input {
@@ -39,14 +57,19 @@
 
   [class*='icon'] {
     right: 18px;
+    bottom: 15px;
   }
 
   input::placeholder {
     color: $color-primary-black;
   }
 
-  > * {
+  >* {
     padding-left: 0;
+
+    @include mobile {
+      font-size: 11px;
+    }
   }
 
   @media screen and (max-width: 850px) {
@@ -54,11 +77,13 @@
     margin-bottom: 15px;
   }
 }
+
 .phoneInputWrap {
   position: relative;
 }
-.phoneInput {
-}
+
+.phoneInput {}
+
 .phonePlaceholder {
   position: absolute;
   top: 34px;
@@ -69,6 +94,7 @@
   line-height: 17px;
   text-align: left;
   pointer-events: none;
+
   span {
     color: black;
   }
@@ -77,11 +103,21 @@
 .formTitle {
   margin-bottom: 16px;
 }
+
 .radio {
   display: flex;
   align-items: center;
   padding: 13px 8px 29px;
+
+  @include mobile {
+    &>div {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+  }
 }
+
 .radioLabel {
   font-family: $font-Lato;
   font-size: 12px;
@@ -89,19 +125,32 @@
   color: $color-placeholder;
   margin-right: 25px;
 }
+
 .address {
   position: relative;
   height: 89px;
-  width: 676px;
+  width: 100%;
+  max-width: 676px;
   border: 1px solid $color-laros-light-grey;
   border-radius: 8px;
   padding-top: 8px;
   margin-bottom: 8px;
+
+  @include mobile {
+    height: 110px;
+
+    &>div {
+      display: flex;
+      flex-direction: column;
+    }
+  }
 }
+
 .addressInputs {
   display: flex;
   flex-wrap: wrap;
 }
+
 .adressTitle {
   font-family: $font-Lato;
   font-size: 12px;
@@ -118,29 +167,47 @@
   font-weight: $fw-semibold;
   padding: 0 8px 8px 8px;
   width: 50%;
+
   &::placeholder {
     color: $color-placeholder;
   }
 }
+
 .addressRegion {
   width: 100%;
 }
+
 .actions {
   display: flex;
   justify-content: end;
   margin-top: 20px;
   padding-bottom: 40px;
 }
+
 .downloadBtn {
   width: 120px;
+
+  @include mobile {
+    font-size: 13px;
+  }
 }
+
 .addressIcon1 {
   position: absolute;
   right: 9px;
   bottom: 43px;
+
+  @include mobile {
+    bottom: 25px;
+  }
 }
+
 .addressIcon2 {
   position: absolute;
   bottom: 9px;
   right: 9px;
+
+  @include mobile {
+    bottom: 0;
+  }
 }
