--- a/src/features/SendBrochuresModal/SendBrochuresModal.module.scss
+++ b/src/features/SendBrochuresModal/SendBrochuresModal.module.scss
@@ -6,10 +6,10 @@
   max-width: 850px;
   height: 100%;
   padding: 24px 85px 44px;
-  overflow-y: scroll;
+  overflow-x: auto;
 
   @include mobile {
-    padding: 24px 10px 44px;
+    padding: 24px 20px 44px;
   }
 }
 
@@ -32,10 +32,12 @@
   @include mobile {
     flex-wrap: wrap;
     gap: 10px;
+  }
+  @media (max-width: 400px) {
     justify-content: center;
   }
 
-  &>div {
+  & > div {
     margin-right: 12px;
   }
 }
@@ -64,7 +66,7 @@
     color: $color-primary-black;
   }
 
-  >* {
+  > * {
     padding-left: 0;
 
     @include mobile {
@@ -82,7 +84,8 @@
   position: relative;
 }
 
-.phoneInput {}
+.phoneInput {
+}
 
 .phonePlaceholder {
   position: absolute;
@@ -110,14 +113,24 @@
   padding: 13px 8px 29px;
 
   @include mobile {
-    &>div {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    padding: 0 0 10px 0;
+  }
+}
+.radioButtons {
+  @include mobile {
+    display: block;
+    label {
+      display: block;
+      margin-top: 10px;
+      span {
+        margin-left: 0;
+      }
     }
   }
 }
-
 .radioLabel {
   font-family: $font-Lato;
   font-size: 12px;
@@ -139,7 +152,7 @@
   @include mobile {
     height: 110px;
 
-    &>div {
+    & > div {
       display: flex;
       flex-direction: column;
     }
