--- a/src/pages/BrochuresPage/BrochuresPage.module.scss
+++ b/src/pages/BrochuresPage/BrochuresPage.module.scss
@@ -19,7 +19,7 @@
     padding: 80px 20px 0;
   }
   @include mobile-laptop {
-    padding: 0 20px 0;
+    padding: 0 65px 0;
   }
   @include mobile-tablet {
     padding: 0 20px 0;
@@ -36,6 +36,7 @@
   font-size: 56px;
   font-weight: $fw-bold;
   margin-bottom: 16px;
+  padding-left: 4%;
 
   @include mobile {
     font-size: 30px;
@@ -50,7 +51,7 @@
   font-size: 12px;
   font-weight: $fw-regular;
   line-height: 20px;
-
+  padding-left: 4%;
   @include mobile-laptop {
     width: 70%;
     margin-bottom: 20px;
@@ -108,8 +109,8 @@
 .sort {
   font-size: 20px;
   font-weight: $fw-bold;
-  margin-bottom: 24px;
-
+  width: 92%;
+  margin: 0 auto 24px;
   @media (max-width: 1400px) {
     text-align: center;
   }
