--- a/src/pages/HomePage/Explore/Explore.module.scss
+++ b/src/pages/HomePage/Explore/Explore.module.scss
@@ -35,6 +35,7 @@
   border-radius: 17px;
   background-size: 100% 100%;
   position: relative;
+  cursor: pointer;
 
   &:nth-child(1) {
     width: 395px;
@@ -73,13 +74,8 @@
 }
 .shadow {
   width: 100%;
-  height: 200px;
+  height: 100%;
   background: $areas-of-gradient;
-
-  @include mobile-tablet {
-    height: 150px;
-    max-width: 200px;
-  }
 }
 .title {
   padding-top: 70px;
