--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -1,5 +1,8 @@
 @use '/src/styles/style.scss' as *;
 
+.bg {
+  background-color: $color-modal-header;
+}
 .commentsWrapper {
   background-color: rgba(242, 245, 248, 1);
   margin-bottom: 60px;
